--- a/index.html
+++ b/index.html
@@ -1,80 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <div class="header-container">
-            <div class="logo">
-                <a href="#"><img src="images/logo.png" alt=""></a>
-            </div>
-            <div class="topics">
-            </div>
-            <nav>
-                <ul class="main-nav">
-                    <li>
-                        <img src="images/article-logo.png" alt="">
-                        <figcaption>
-                            <h2>
-                                <span>
-                                    Articles
-                                </span>
-                            </h2>
-                            <p>Design & development</p>
-                        </figcaption>
-                    </li>
-                    <li>
-                        <img src="images/book-logo.png" alt="">
-                        <figcaption>
-                            <h2>
-                                <span>
-                                    Books
-                                </span>
-                            </h2>
-                            <p>Physical & digital books</p>
-                        </figcaption>
-                    </li>
-                    <li>
-                        <img src="images/ticket-logo.png" alt="">
-                        <figcaption>
-                            <h2>
-                                <span>
-                                    Events
-                                </span>
-                            </h2>
-                            <p>Conference & workshops</p>
-                        </figcaption>
-                    </li>
-                    <li>
-                        <img src="images/jobs-logo.png" alt="">
-                        <figcaption>
-                            <h2>
-                                <span>
-                                    Jobs
-                                </span>
-                            </h2>
-                            <p>Find work & employees</p>
-                        </figcaption>
-                    </li>
-                    <li>
-                        <img src="images/member-logo.png" alt="">
-                        <figcaption>
-                            <h2>
-                                <span>Membership
+    <title>Smashing Magazine</title>
+  </head>
 
-                                </span>
-                            </h2>
-                            <p>Webinars & early birds</p>
-                        </figcaption>
-                    </li>
-                </ul>
-            </nav>
+  <body>
+    <header>
+      <div class="grid">
+        <div class="col-1-3">
+          <a href="#">Smashing magazine logo</a>
         </div>
+        <div class="col-2-3">
+          <nav>
+            <ul>
+              <li>
+                <h2>
+                  Articles
+                </h2>
+                <p>Design & development</p>
+              </li>
+              <li>
+                <h2>
+                  Books
+                </h2>
+                <p>Physical & digital books</p>
+              </li>
+              <li>
+                <h2>
+                  Events
+                </h2>
+                <p>Conference & workshops</p>
+              </li>
+              <li>
+                <h2>
+                  Jobs
+                </h2>
+                <p>Find work & employees</p>
+              </li>
+              <li>
+                <h2>
+                  Membership
+                </h2>
+                <p>Webinars & early birds</p>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="col-1-3 last">
+          <div class="topics">
+            Topics
+          </div>
+        </div>
+      </div>
     </header>
-</body>
+  </body>
+
 </html>
