changes in index.html

--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
         </div>
       </div>
     </header>
+
+    <div class="first">
+        <div class="box">
+            <h1>A Practical Guide to SVG and design toools</h1>
+        </div>
+        <div class="box">
+           <h1>Design for the future</h1> 
+        </div>
+        <div class="box">
+            <h1>Hybrid lazy loading: A progressive migration to native lazy loading </h1>
+        </div>
+        <div class="box">
+            <h1>Digging into the display property</h1>
+        </div>
+    </div>
+
   </body>
 
 </html>
