--- a/index.html
+++ b/index.html
@@ -59,19 +59,22 @@
       </div>
     </header>
 
-    <div class="first">
-        <div class="box">
-            <h1>A Practical Guide to SVG and design toools</h1>
-        </div>
-        <div class="box">
-           <h1>Design for the future</h1> 
-        </div>
-        <div class="box">
-            <h1>Hybrid lazy loading: A progressive migration to native lazy loading </h1>
-        </div>
-        <div class="box">
-            <h1>Digging into the display property</h1>
-        </div>
+    <div class="banner">
+      <div class="box">
+        <h1>A Practical Guide to SVG and design toools</h1>
+      </div>
+      <div class="box">
+        <h1>Design for the future</h1>
+      </div>
+      <div class="info-box">
+        <h2></h2>
+      </div>
+      <div class="box">
+        <h1>Hybrid lazy loading: A progressive migration to native lazy loading </h1>
+      </div>
+      <div class="box">
+        <h1>Digging into the display property</h1>
+      </div>
     </div>
 
   </body>
