--- a/index.html
+++ b/index.html
@@ -59,15 +59,19 @@
       </div>
     </header>
 
+
     <div class="banner">
+            <div class="info-box">
+                    <h2>Don't Miss These Latest</h2>
+                    <br>
+                    <h2> Articles</h2>
+            </div>
+            <div class="box-container">
       <div class="box">
         <h1>A Practical Guide to SVG and design toools</h1>
       </div>
       <div class="box">
         <h1>Design for the future</h1>
-      </div>
-      <div class="info-box">
-        <h2></h2>
       </div>
       <div class="box">
         <h1>Hybrid lazy loading: A progressive migration to native lazy loading </h1>
@@ -76,6 +80,8 @@
         <h1>Digging into the display property</h1>
       </div>
     </div>
+</div>
+    
 
   </body>
 
