added articles boxes

--- a/index.html
+++ b/index.html
@@ -83,6 +83,22 @@
 
     </div>
 
+
+    <div class="articles">
+        <div class="articles-box">
+            <h2>Digging Into The Display Property: The Two Values Of Display</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab placeat velit doloribus temporibus sed nesciunt? Qui reprehenderit illum, quas veritatis eveniet perspiciatis, dolore, atque ipsam mollitia accusamus consequuntur voluptatem. Voluptates.</p>
+        </div>
+        <div class="articles-box">
+            <h2>How We Used WebAssembly To Speed Up Our Web App By 20X (Case Study)</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cum natus unde maiores vitae repellendus minus! Nisi placeat atque excepturi eos at maxime consequuntur aut dicta distinctio temporibus. Esse alias delectus sequi atque inventore necessitatibus porro sunt impedit saepe neque!</p>
+        </div>
+        <div class="articles-box">
+            <h2>Going Serverless With Cloudflare Workers</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequuntur aut nulla molestiae inventore dolorem debitis ratione dolores sapiente consectetur!</p>
+        </div>
+    </div>
+
   </body>
 
 </html>
