Add boxes with gray shades

--- a/index.html
+++ b/index.html
@@ -81,23 +81,78 @@
         <h2> Articles</h2>
       </div>
 
-    </div>
 
+      <div class="articles">
+        <div class="articles-box">
+          <h2>Digging Into The Display Property: The Two Values Of Display</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab placeat velit doloribus temporibus sed
+            nesciunt? Qui reprehenderit illum, quas veritatis eveniet perspiciatis, dolore, atque ipsam mollitia
+            accusamus consequuntur voluptatem. Voluptates.</p>
+        </div>
+        <div class="articles-box">
+          <h2>How We Used WebAssembly To Speed Up Our Web App By 20X (Case Study)</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cum natus unde maiores vitae repellendus
+            minus! Nisi placeat atque excepturi eos at maxime consequuntur aut dicta distinctio temporibus. Esse alias
+            delectus sequi atque inventore necessitatibus porro sunt impedit saepe neque!</p>
+        </div>
+        <div class="articles-box">
+          <h2>Going Serverless With Cloudflare Workers</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequuntur aut nulla molestiae inventore
+            dolorem debitis ratione dolores sapiente consectetur!</p>
+        </div>
+      </div>
+      <div class="two-box-articles">
+        <div class="articles-box-small">
+          <h1>Slack </h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti possimus dolores tempora debitis quat.
+          </p>
+        </div>
+        <div class="articles-box-big">
+          <h1>1,482 smashing members</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, recusandae. Iusto excepturi dolorem
+            natus dolore in, ducimus recusandae placeat eos numquam aut incidunt ratione illum fuga soluta blanditiis
+            cumque! Soluta!</p>
+        </div>
+      </div>
+      <div class="articles">
+        <div class="articles-box">
+          <h2>Digging Into The Display Property: The Two Values Of Display</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab placeat velit doloribus temporibus sed
+            nesciunt? Qui reprehenderit illum, quas veritatis eveniet perspiciatis, dolore, atque ipsam mollitia
+            accusamus consequuntur voluptatem. Voluptates.</p>
+        </div>
+        <div class="articles-box">
+          <h2>How We Used WebAssembly To Speed Up Our Web App By 20X (Case Study)</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cum natus unde maiores vitae repellendus
+            minus! Nisi placeat atque excepturi eos at maxime consequuntur aut dicta distinctio temporibus. Esse alias
+            delectus sequi atque inventore necessitatibus porro sunt impedit saepe neque!</p>
+        </div>
+        <div class="articles-box">
+          <h2>Going Serverless With Cloudflare Workers</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequuntur aut nulla molestiae inventore
+            dolorem debitis ratione dolores sapiente consectetur!</p>
+        </div>
+      </div>
+      <div class="two-box-articles">
+        <div class="articles-box-small nobg">
+          <h2>Design A Lead Gen Landing Page For Mobile That Converts</h2>
+          <small>by Suzzane Scarre</small>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis impedit fugit accusamus hic. Neque error
+            laborum incidunt eaque. Quidem laborum excepturi optio nihil nam? Dicta odit porro error quas explicabo!
+          </p>
+        </div>
+        <div class="articles-box-big">
+          <h1>1,482 smashing members</h1>
 
-    <div class="articles">
-        <div class="articles-box">
-            <h2>Digging Into The Display Property: The Two Values Of Display</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab placeat velit doloribus temporibus sed nesciunt? Qui reprehenderit illum, quas veritatis eveniet perspiciatis, dolore, atque ipsam mollitia accusamus consequuntur voluptatem. Voluptates.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, recusandae. Iusto excepturi dolorem
+            natus dolore in, ducimus recusandae placeat eos numquam aut incidunt ratione illum fuga soluta blanditiis
+            cumque! Soluta!</p>
         </div>
-        <div class="articles-box">
-            <h2>How We Used WebAssembly To Speed Up Our Web App By 20X (Case Study)</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis cum natus unde maiores vitae repellendus minus! Nisi placeat atque excepturi eos at maxime consequuntur aut dicta distinctio temporibus. Esse alias delectus sequi atque inventore necessitatibus porro sunt impedit saepe neque!</p>
-        </div>
-        <div class="articles-box">
-            <h2>Going Serverless With Cloudflare Workers</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequuntur aut nulla molestiae inventore dolorem debitis ratione dolores sapiente consectetur!</p>
-        </div>
-    </div>
+      </div>
+      <div class="link">
+        <a href="#">See All the latest articles →</a>
+      </div>
+
 
   </body>
 
