added person of the week

--- a/index.html
+++ b/index.html
@@ -153,6 +153,30 @@
         <a href="#">See All the latest articles →</a>
       </div>
 
+      <div class="smashconf">
+        <div class="smash-container">
+          <small class="top-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
+          <h2>SmashingConf Toronto 2019</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore omnis iusto minima optio rerum. Quibusdam molestias consequuntur temporibus eum, odit facilis error expedita saepe, aspernatur, officia labore recusandae illo sed?</p>
+          <button class="explore-btn">
+            Explore all speakers and topics →
+          </button>
+        </div>
+      </div>
+
+      <div class="person">
+        <div class="person-week">
+        <div class="person-picture">  
+        </div>
+        <div class="person-content">
+          <h4>Person of the week</h4>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti sunt fuga nihil, libero aperiam, alias culpa ad inventore suscipit quae ipsum exercitationem sint eaque molestiae eos quisquam excepturi corporis impedit?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam illum omnis provident porro asperiores hic minus. Deleniti a, praesentium officia tempore ipsa tempora quia officiis iste, in laborum, quasi fugiat!
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate saepe necessitatibus ut iure harum itaque illum, quo doloribus temporibus vero ullam? Enim deserunt earum iure sequi ab deleniti voluptatem fugit.
+          </p>
+          </div>
+      </div>
+      </div>
 
   </body>
 
