add two more boxes

--- a/index.html
+++ b/index.html
@@ -157,7 +157,9 @@
         <div class="smash-container">
           <small class="top-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</small>
           <h2>SmashingConf Toronto 2019</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore omnis iusto minima optio rerum. Quibusdam molestias consequuntur temporibus eum, odit facilis error expedita saepe, aspernatur, officia labore recusandae illo sed?</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore omnis iusto minima optio rerum. Quibusdam
+            molestias consequuntur temporibus eum, odit facilis error expedita saepe, aspernatur, officia labore
+            recusandae illo sed?</p>
           <button class="explore-btn">
             Explore all speakers and topics →
           </button>
@@ -166,17 +168,112 @@
 
       <div class="person">
         <div class="person-week">
-        <div class="person-picture">  
-        </div>
-        <div class="person-content">
-          <h4>Person of the week</h4>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti sunt fuga nihil, libero aperiam, alias culpa ad inventore suscipit quae ipsum exercitationem sint eaque molestiae eos quisquam excepturi corporis impedit?
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam illum omnis provident porro asperiores hic minus. Deleniti a, praesentium officia tempore ipsa tempora quia officiis iste, in laborum, quasi fugiat!
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate saepe necessitatibus ut iure harum itaque illum, quo doloribus temporibus vero ullam? Enim deserunt earum iure sequi ab deleniti voluptatem fugit.
-          </p>
+          <div class="person-picture">
           </div>
+          <div class="person-content">
+            <h4>Person of the week</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti sunt fuga nihil, libero aperiam, alias
+              culpa ad inventore suscipit quae ipsum exercitationem sint eaque molestiae eos quisquam excepturi corporis
+              impedit?
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam illum omnis provident porro asperiores
+              hic minus. Deleniti a, praesentium officia tempore ipsa tempora quia officiis iste, in laborum, quasi
+              fugiat!
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate saepe necessitatibus ut iure harum
+              itaque illum, quo doloribus temporibus vero ullam? Enim deserunt earum iure sequi ab deleniti voluptatem
+              fugit.
+            </p>
+          </div>
+        </div>
+        <div class="person-2-col">
+          <div class="person-left">
+            <div class="person-img"></div>
+            <div class="person-text">
+              <span class="small-heading">Miriam Suzanne shared</span>
+              <h2>Angled Background Mixin</h2>
+              <p> <span>apr 29, 2019 —</span>Miriam Suzanne’s Codepen “Angled Background CSS-only ‘Mixin’” is a
+                demonstration of plain CSS
+                “functions” and “mixins”.A useful way to provide reusable patterns in CSS.</p>
+            </div>
+          </div>
+          <div class="person-right">
+            <div class="person-img"></div>
+            <div class="person-text">
+              <span class="small-heading">Miriam Suzanne shared</span>
+              <h2>Angled Background Mixin</h2>
+              <p> <span>apr 29, 2019 —</span>Miriam Suzanne’s Codepen “Angled Background CSS-only ‘Mixin’” is a
+                demonstration of plain CSS
+                “functions” and “mixins”.A useful way to provide reusable patterns in CSS.</p>
+
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="person-2-col">
+        <div class="person-left">
+          <div class="person-img"></div>
+          <div class="person-text">
+            <span class="small-heading">Miriam Suzanne shared</span>
+            <h2>Angled Background Mixin</h2>
+            <p> <span>apr 29, 2019 —</span>Miriam Suzanne’s Codepen “Angled Background CSS-only ‘Mixin’” is a
+              demonstration of plain CSS
+              “functions” and “mixins”.A useful way to provide reusable patterns in CSS.</p>
+
+          </div>
+        </div>
+        <div class="person-right">
+          <div class="person-img"></div>
+          <div class="person-text">
+            <span class="small-heading">Miriam Suzanne shared</span>
+            <h2>Angled Background Mixin</h2>
+            <p> <span>apr 29, 2019 —</span>Miriam Suzanne’s Codepen “Angled Background CSS-only ‘Mixin’” is a
+              demonstration of plain CSS
+              “functions” and “mixins”.A useful way to provide reusable patterns in CSS.</p>
+
+          </div>
+        </div>
       </div>
+    </div>
+    <div class="person-2-col">
+      <div class="person-left">
+        <div class="person-img"></div>
+        <div class="person-text">
+          <span class="small-heading">Miriam Suzanne shared</span>
+          <h2>Angled Background Mixin</h2>
+          <p> <span>apr 29, 2019 —</span>Miriam Suzanne’s Codepen “Angled Background CSS-only ‘Mixin’” is a
+            demonstration of plain CSS
+            “functions” and “mixins”.A useful way to provide reusable patterns in CSS.</p>
+
+        </div>
+      </div>
+      <div class="person-right">
+        <div class="person-img"></div>
+        <div class="person-text">
+          <span class="small-heading">Miriam Suzanne shared</span>
+          <h2>Angled Background Mixin</h2>
+          <p> <span>apr 29, 2019 —</span>Miriam Suzanne’s Codepen “Angled Background CSS-only ‘Mixin’” is a
+            demonstration of plain CSS
+            “functions” and “mixins”.A useful way to provide reusable patterns in CSS.</p>
+
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="link">
+      <a href="#">More links on Twitter →</a>
+    </div>
+    <div class="two-col">
+      <div class="two-col-content">
+        <span class="two-col-heading">Miriam Suzanne shared</span>
+        <h2>Design Systems</h2>
+        <p>Meet <strong>Design Systems</strong>, a recent Smashing book in which Alla Kholmatova explores how to set up
+          an <strong>effective design system</strong>
+          to create great digital products. With common traps, gotchas and lessons learned.</p>
+        <button class="explore-btn">
+          Table of Contents ↬
+        </button>
+      </div>
+      <div class="two-col-img"></div>
+    </div>
 
   </body>
 
