--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
     <div class="link">
       <a href="#">More links on Twitter →</a>
     </div>
+    <div class="table-of-contents-container">
     <div class="two-col">
       <div class="two-col-content">
         <span class="two-col-heading">Miriam Suzanne shared</span>
@@ -274,7 +275,173 @@
       </div>
       <div class="two-col-img"></div>
     </div>
+    </div>
 
+    <div class="guides">
+      <div class="guides-container">
+        <div class="guides-grid">
+          <div class="guide-item">
+              <div class="guide-item-container">
+              <div class="item-header">
+              <small>Guides</small>
+              <h2>New Front-End Challenges To Master</h2>
+              </div>
+                <div class="guite-item-content"></div>
+                <ul class="guide-list">
+                  <li>CSS Grid Layout</li>
+                  <li>Pattern Library</li>
+                  <li>Progressive Web Apps</li>
+                  <li>Switching to HTTPS</li>
+                  <li>HTTP/2 Guidelines</li>
+                  <li>React & Vue.js</li>
+                  <li>Redux For Designers</li>
+                  <li>Vue Components</li>
+                </ul>
+           </div>
+           <div class="guide-item">
+              <div class="guide-item-container">
+              <div class="item-header">
+              <small>Guides</small>
+              <h2>Performance Optimization & Strategy</h2>
+              </div>
+              <div class="guite-item-content">
+                <ul class="guide-list">
+                  <li>Quick Performance Wins</li>
+                  <li>Building For Performance</li>
+                  <li>Front-End Optimization</li>
+                  <li>Back-End Optimization</li>
+                  <li>Better Compression</li>
+                  <li>Progressive Web Apps</li>
+                  <li>Perceived Performance</li>
+                </ul>
+              </div>         
+           </div>
+    </div>
+    <div class="guide-item">
+        <div class="guide-item-container">
+         <div class="item-header">
+          <small>Guides</small>
+          <h2>Improving Workflow & Data Protection</h2>
+         </div>
+         <div class="guite-item-content">
+           <ul class="guide-list">
+             <li>GDPR For Developers</li>
+             <li>Privacy Frameworks</li>
+             <li>Estimating Time</li>
+             <li>Dealing With Irrational Clients</li>
+             <li>Getting Deliverables Right</li>
+             <li>Meeting Deadlines</li>
+             <li>Convincing Clients</li>
+             <li>Invoicing Clients</li>
+           </ul>
+         </div>
+      </div>
+</div>
+    </div>
+    </div>
+    </div>
+    </div>
+
+    <div class="sub-guide">
+            <div class="guide-item-container">
+                <small>Guides</small>
+                <h2>Design Patterns & Checklists</h2>
+             <div class="guite-item-content">
+               <ul class="guide-list">
+                 <li>Responsive Art-Direction</li>
+                 <li>Perfect Configurator</li>
+                 <li>Perfect Web Form</li>
+                 <li>Perfect Accordion</li>
+                 <li>Perfect Date Picker</li>
+                 <li>Perfect Slider</li>
+                 <li>Perfect Comparison Table</li>
+                 <li>Perfect Infinite Scroll</li>
+                 <li>Perfect Carousel</li>
+                 <li>Privacy UX</li>
+               </ul>
+             </div>
+         </div>
+      <div class="newsletter">
+        <div class="newsletter-container">
+          <h2>Smashing newsletter</h2>
+          <p>Imagine you wrote a beautiful song and nobody discovered it.
+              That would make any cat sad. Don't let that happen!</p>
+              <div class="newsletter-img">
+              </div>
+              <div class="sub-button">
+              <button class="explore-btn">
+                Subscribe →
+              </button>
+              <br><br>
+              <small>Useful tips for web designers. Sent 2× a month.
+                  You can unsubscribe any time — obviously.</small>
+            </div>
+
+        </div>
+        </div>
+    </div>
+
+    <div class="link">
+        <a href="#">See All the latest articles →</a>
+      </div>
+
+    <footer>
+      <ul class="footer-container">
+        <div class="footer-column">
+          <h4>BROWSE ALL SMASHING MAGAZINE TOPICS</h4>
+          <ul class="footer-list">
+            <li>Accessibility</li>
+            <li>Android</li>
+            <li>Animation</li>
+            <li>Apps</li>
+            <li>CSS</li>
+            <li>Design</li>
+            <li>Design Patterns</li>
+            <li>Design Systems</li>
+            <li>E-Commerce</li>
+            <li>Freebies</li>
+            <li>Graphics</li>
+            <li>HTML</li>
+            <li>Illustrator</li>
+            <li>Inspiration</li>
+            <li>iOS</li>
+            <li>JavaScript</li>
+            <li>Mobile</li>
+            <li>Patterns Libraries</li>
+            <li>Perfomance</li>
+            <li>Photoshop</li>
+            <li>Plugins</li>
+            <li>React</li>
+            <li>Responsive Web Design</li>
+            <li>Service Workers</li>
+            <li>Sketch</li>
+            <li>Typography</li>
+            <li>UI</li>
+            <li>Usability</li>
+            <li>User Experience</li>
+            <li>Wallpapers</li>
+            <li>Web Design</li>
+            <li>WordPress</li>
+            <li>Workflow</li>
+          </ul>
+        </div>
+        <div class="footer-notes">
+          <p>With a commitment to quality content for the design community.</p>
+          <p>Founded by Vitaly Friedman and Sven Lennartz. 2006–2019.</p>
+          <p>Smashing is proudly running on Netlify.</p>
+          <p>Fonts by Latinotype.</p>
+        </div>
+        <ul class="footer-links">
+          <li><a href=""></a>Write for us</li>
+          <li><a href=""></a>Contact us</li>
+          <li><a href=""></a>About us(Impressum)</li>
+          <li><a href=""></a>Privacy policy</li>
+          <li><a href=""></a>Membership login</li>
+          <li><a href=""></a>Delivery times</li>
+          <li><a href=""></a>Advertise</li>
+        </ul>
+      </div>
+    </footer>
   </body>
 
 </html>
