fix minor changes

--- a/index.html
+++ b/index.html
@@ -262,128 +262,131 @@
       <a href="#">More links on Twitter →</a>
     </div>
     <div class="table-of-contents-container">
-    <div class="two-col">
-      <div class="two-col-content">
-        <span class="two-col-heading">Miriam Suzanne shared</span>
-        <h2>Design Systems</h2>
-        <p>Meet <strong>Design Systems</strong>, a recent Smashing book in which Alla Kholmatova explores how to set up
-          an <strong>effective design system</strong>
-          to create great digital products. With common traps, gotchas and lessons learned.</p>
-        <button class="explore-btn">
-          Table of Contents ↬
-        </button>
+      <div class="two-col">
+        <div class="two-col-content">
+          <span class="two-col-heading">Miriam Suzanne shared</span>
+          <h2>Design Systems</h2>
+          <p>Meet <strong>Design Systems</strong>, a recent Smashing book in which Alla Kholmatova explores how to set
+            up
+            an <strong>effective design system</strong>
+            to create great digital products. With common traps, gotchas and lessons learned.</p>
+          <button class="explore-btn">
+            Table of Contents ↬
+          </button>
+        </div>
+        <div class="two-col-img"></div>
       </div>
-      <div class="two-col-img"></div>
-    </div>
     </div>
 
     <div class="guides">
       <div class="guides-container">
         <div class="guides-grid">
           <div class="guide-item">
-              <div class="guide-item-container">
+            <div class="guide-item-container">
               <div class="item-header">
-              <small>Guides</small>
-              <h2>New Front-End Challenges To Master</h2>
+                <small>Guides</small>
+                <h2>New Front-End Challenges To Master</h2>
               </div>
-                <div class="guite-item-content"></div>
-                <ul class="guide-list">
-                  <li>CSS Grid Layout</li>
-                  <li>Pattern Library</li>
-                  <li>Progressive Web Apps</li>
-                  <li>Switching to HTTPS</li>
-                  <li>HTTP/2 Guidelines</li>
-                  <li>React & Vue.js</li>
-                  <li>Redux For Designers</li>
-                  <li>Vue Components</li>
-                </ul>
-           </div>
-           <div class="guide-item">
+              <div class="guite-item-content"></div>
+              <ul class="guide-list">
+                <li>CSS Grid Layout</li>
+                <li>Pattern Library</li>
+                <li>Progressive Web Apps</li>
+                <li>Switching to HTTPS</li>
+                <li>HTTP/2 Guidelines</li>
+                <li>React & Vue.js</li>
+                <li>Redux For Designers</li>
+                <li>Vue Components</li>
+              </ul>
+            </div>
+            <div class="guide-item">
               <div class="guide-item-container">
-              <div class="item-header">
-              <small>Guides</small>
-              <h2>Performance Optimization & Strategy</h2>
+                <div class="item-header">
+                  <small>Guides</small>
+                  <h2>Performance Optimization & Strategy</h2>
+                </div>
+                <div class="guite-item-content">
+                  <ul class="guide-list">
+                    <li>Quick Performance Wins</li>
+                    <li>Building For Performance</li>
+                    <li>Front-End Optimization</li>
+                    <li>Back-End Optimization</li>
+                    <li>Better Compression</li>
+                    <li>Progressive Web Apps</li>
+                    <li>Perceived Performance</li>
+                  </ul>
+                </div>
               </div>
-              <div class="guite-item-content">
-                <ul class="guide-list">
-                  <li>Quick Performance Wins</li>
-                  <li>Building For Performance</li>
-                  <li>Front-End Optimization</li>
-                  <li>Back-End Optimization</li>
-                  <li>Better Compression</li>
-                  <li>Progressive Web Apps</li>
-                  <li>Perceived Performance</li>
-                </ul>
-              </div>         
-           </div>
-    </div>
-    <div class="guide-item">
-        <div class="guide-item-container">
-         <div class="item-header">
-          <small>Guides</small>
-          <h2>Improving Workflow & Data Protection</h2>
-         </div>
-         <div class="guite-item-content">
-           <ul class="guide-list">
-             <li>GDPR For Developers</li>
-             <li>Privacy Frameworks</li>
-             <li>Estimating Time</li>
-             <li>Dealing With Irrational Clients</li>
-             <li>Getting Deliverables Right</li>
-             <li>Meeting Deadlines</li>
-             <li>Convincing Clients</li>
-             <li>Invoicing Clients</li>
-           </ul>
-         </div>
+            </div>
+            <div class="guide-item">
+              <div class="guide-item-container">
+                <div class="item-header">
+                  <small>Guides</small>
+                  <h2>Improving Workflow & Data Protection</h2>
+                </div>
+                <div class="guite-item-content">
+                  <ul class="guide-list">
+                    <li>GDPR For Developers</li>
+                    <li>Privacy Frameworks</li>
+                    <li>Estimating Time</li>
+                    <li>Dealing With Irrational Clients</li>
+                    <li>Getting Deliverables Right</li>
+                    <li>Meeting Deadlines</li>
+                    <li>Convincing Clients</li>
+                    <li>Invoicing Clients</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-</div>
-    </div>
-    </div>
-    </div>
     </div>
 
     <div class="sub-guide">
-            <div class="guide-item-container">
-                <small>Guides</small>
-                <h2>Design Patterns & Checklists</h2>
-             <div class="guite-item-content">
-               <ul class="guide-list">
-                 <li>Responsive Art-Direction</li>
-                 <li>Perfect Configurator</li>
-                 <li>Perfect Web Form</li>
-                 <li>Perfect Accordion</li>
-                 <li>Perfect Date Picker</li>
-                 <li>Perfect Slider</li>
-                 <li>Perfect Comparison Table</li>
-                 <li>Perfect Infinite Scroll</li>
-                 <li>Perfect Carousel</li>
-                 <li>Privacy UX</li>
-               </ul>
-             </div>
-         </div>
+      <div class="guide-item-container">
+        <small>Guides</small>
+        <h2>Design Patterns & Checklists</h2>
+        <div class="guite-item-content">
+          <ul class="guide-list">
+            <li>Responsive Art-Direction</li>
+            <li>Perfect Configurator</li>
+            <li>Perfect Web Form</li>
+            <li>Perfect Accordion</li>
+            <li>Perfect Date Picker</li>
+            <li>Perfect Slider</li>
+            <li>Perfect Comparison Table</li>
+            <li>Perfect Infinite Scroll</li>
+            <li>Perfect Carousel</li>
+            <li>Privacy UX</li>
+          </ul>
+        </div>
+      </div>
       <div class="newsletter">
         <div class="newsletter-container">
           <h2>Smashing newsletter</h2>
           <p>Imagine you wrote a beautiful song and nobody discovered it.
-              That would make any cat sad. Don't let that happen!</p>
-              <div class="newsletter-img">
-              </div>
-              <div class="sub-button">
-              <button class="explore-btn">
+            That would make any cat sad. Don't let that happen!</p>
+          <div class="newsletter-img">
+          </div>
+          <div class="sub-button">
+            <div class="wrap-email-subscribe">
+              <input type="text" class="email" placeholder="Your (jazzy)email">
+              <button class="subscribe-btn">
                 Subscribe →
               </button>
               <br><br>
               <small>Useful tips for web designers. Sent 2× a month.
-                  You can unsubscribe any time — obviously.</small>
+                You can unsubscribe any time — obviously.</small>
             </div>
-
+          </div>
         </div>
-        </div>
+      </div>
     </div>
 
     <div class="link">
-        <a href="#">See All the latest articles →</a>
-      </div>
+      <a href="#">See All the latest articles →</a>
+    </div>
 
     <footer>
       <ul class="footer-container">
@@ -440,7 +443,7 @@
           <li><a href=""></a>Delivery times</li>
           <li><a href=""></a>Advertise</li>
         </ul>
-      </div>
+        </div>
     </footer>
   </body>
 
