--- a/index.html
+++ b/index.html
@@ -257,7 +257,6 @@
         </div>
       </div>
     </div>
-    </div>
     <div class="link">
       <a href="#">More links on Twitter →</a>
     </div>
@@ -389,7 +388,7 @@
     </div>
 
     <footer>
-      <ul class="footer-container">
+      <div class="footer-container">
         <div class="footer-column">
           <h4>BROWSE ALL SMASHING MAGAZINE TOPICS</h4>
           <ul class="footer-list">
